# DoorHandle

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt.user.a5cff1b  CMakeLists.txt.user.ae143cc  README.md
cmake/: FindQt4.cmake
data/: Captured_door_lab_inside.oni
src/: CMakeLists.txt  Detect.cpp  Detect.cpp~  Detect.h  DoorHandle.cpp  DoorHandle2.cpp  DoorHandle_new.cpp  DoorHandle_normalVisualisation.cpp  Edge.h  GNG.cpp  GNG.h  Node.h
